--- a/index.html
+++ b/index.html
@@ -35,10 +35,13 @@
       {% capture introduction %}{% include introduction.md %}{% endcapture %}
       {{ introduction | markdownify }}
       <div class="button">
-        <a href="#plays_index_anchor" title="View the Plays">SEE THE PLAYS</a>
+        <a href="#plays_index_anchor" title="View the Plays">VE LOS
+          PASOS</a>
       </div>
       <div class="button">
-        <a href="https://github.com/whitehouse/playbook#readme" title="Visit Github to Improve This Content">HELP IMPROVE THIS CONTENT</a>
+        <a href="https://github.com/whitehouse/playbook#readme"
+          title="Visit Github to Improve This Content">AYUDA A MEJORAR
+        ESTE CONTENIDO</a>
       </div>
     </div>
   </div>
@@ -48,7 +51,7 @@
   <div class="outer_container">
     <div class="inner_container">
       <a class="anchor_offset" id="plays_index_anchor"></a>
-      <h3>DIGITAL SERVICE PLAYS</h3>
+      <h3>PASOS PARA ABRIR DATOS</h3>
       <div class="columns">
         <ol>
         {% for play in site.plays %}
