Traduce pasos y ver en detalle

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </ol>
       </div>
       <div class="button">
-        <a href="#play1" title="View the In Detail">IN DETAIL</a>
+        <a href="#play1" title="View the In Detail">VE EN DETALLE</a>
       </div>
     </div>
   </div>
@@ -70,7 +70,7 @@
   {% for play in site.plays %}
     <div class="inner_container">
       <a class="anchor_offset" id="play{{ play.id }}"></a>
-      <h5>PLAY {{ play.id }}</h5>
+      <h5>PASO {{ play.id }}</h5>
       <h2>{{ play.title }}</h2>
 
       {{ play.output }}
