Update github link

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           PASOS</a>
       </div>
       <div class="button">
-        <a href="https://github.com/whitehouse/playbook#readme"
+        <a href="https://github.com/mxabierto/playbook#readme"
           title="Visit Github to Improve This Content">AYUDA A MEJORAR
         ESTE CONTENIDO</a>
       </div>
