Changed id, and references to it, for the first instance of `[id="plays"]` (I decided that the first instance needed adjusting because `<div id="plays" class="outer_container">` is referenced numerous times by the CSS). Resolves WhiteHouse/playbook#102

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         {% endfor %}
       </ul>
       <div id="menu_icon">
-        <a href="#plays" title="Return to Index"></a>
+        <a href="#plays_index_anchor" title="Return to Index"></a>
       </div>
     </div>
   </div>
@@ -49,7 +49,7 @@
 <div id="plays_index">
   <div class="outer_container">
     <div class="inner_container">
-      <a class="anchor_offset" id="plays"></a>
+      <a class="anchor_offset" id="plays_index_anchor"></a>
       <h3>DIGITAL SERVICE PLAYS</h3>
       <div class="columns">
         <ol>
