update see the plays link to use unique ID

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       {% capture introduction %}{% include introduction.md %}{% endcapture %}
       {{ introduction | markdownify }}
       <div class="button">
-        <a href="#plays" title="View the Plays">SEE THE PLAYS</a>
+        <a href="#plays_index_anchor" title="View the Plays">SEE THE PLAYS</a>
       </div>
       <div class="button">
         <a href="https://github.com/whitehouse/playbook#readme" title="Visit Github to Improve This Content">HELP IMPROVE THIS CONTENT</a>
