--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 ---
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>The U.S. Digital Services Playbook</title>
   <meta charset='UTF-8'/>
