--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
       {% capture introduction %}{% include introduction.md %}{% endcapture %}
       {{ introduction | markdownify }}
       <div class="button">
-        <a href="#plays_index_anchor" title="View the Plays">SEE THE PLAYS</a>
+        <a href="#plays_index_anchor" title="View the Plays">See the plays</a>
       </div>
       <div class="button">
-        <a href="https://github.com/whitehouse/playbook#readme" title="Visit Github to Improve This Content">HELP IMPROVE THIS CONTENT</a>
+        <a href="https://github.com/whitehouse/playbook#readme" title="Visit Github to Improve This Content">Help improve this content</a>
       </div>
     </div>
   </div>
@@ -59,7 +59,7 @@
         </ol>
       </div>
       <div class="button">
-        <a href="#play1" title="View the In Detail">IN DETAIL</a>
+        <a href="#play1" title="View the In Detail">In detail</a>
       </div>
     </div>
   </div>
