--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div id="introduction">
   <div class="outer_container">
     <div class="inner_container">
-      <a id="usds_logo" href="http://www.standardscoordination.org/" title="Link to the Standards Coordinating Council"><img src='{{site.baseurl}}/assets/images/USDS-logo-rays-transparent.png' alt="Logo of the Standards Coordinating Council"></a>
+      <a id="scc_logo" href="http://www.standardscoordination.org/" title="Link to the Standards Coordinating Council"><img src='{{site.baseurl}}/assets/images/USDS-logo-rays-transparent.png' alt="Logo of the Standards Coordinating Council"></a>
       {% capture introduction %}{% include introduction.md %}{% endcapture %}
       {{ introduction | markdownify }}
       <div class="button">
