--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a href="#introduction"><h3>Digital Services Playbook</h3></a>
       <ul class="nav">
         {% for play in site.plays %}
-          <li class="play_square"><a href="#play{{ play.id }}" title="View Play {{ play.id }}: {{ play.title }}">{{ play.id }}</a></li>
+          <li class="play_square"><a href="#play{{ play.play_number }}" title="View Play {{ play.play_number }}: {{ play.title }}">{{ play.play_number }}</a></li>
         {% endfor %}
       </ul>
       <div id="menu_icon">
@@ -56,7 +56,7 @@
       <div class="columns">
         <ol>
         {% for play in site.plays %}
-          <li><a href="#play{{ play.id }}" title="View Play {{ play.id }}">{{ play.title }}</a></li>
+          <li><a href="#play{{ play.play_number }}" title="View Play {{ play.play_number }}">{{ play.title }}</a></li>
         {% endfor %}
         </ol>
       </div>
@@ -70,8 +70,8 @@
 <div id="plays" class="outer_container">
   {% for play in site.plays %}
     <div class="inner_container">
-      <a class="anchor_offset" id="play{{ play.id }}"></a>
-      <h6>PLAY {{ play.id }}</h6>
+      <a class="anchor_offset" id="play{{ play.play_number }}"></a>
+      <h6>PLAY {{ play.play_number }}</h6>
       <h2 class="display">{{ play.title }}</h2>
 
       {{ play.output }}
