changed div label

--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
 </div>
 
 
-<div id="plays" class="outer_container">
-  <div class="inner_container">    
+<div id="sdgs" class="outer_container">
+  <div class="inner_container">
+    <br><br>    
     <img src='{{site.url}}/assets/images/horizontal-icons.png' alt="SDGs">
   </div>
 </div>
