started renaming relevant plays

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 <div id="sdgs" class="outer_container">
   <div class="inner_container">
-    <br><br>    
+    <br><h2>Why we do this.  Together.</h2><br>    
     <img src='{{site.url}}/assets/images/horizontal-icons.png' alt="SDGs">
   </div>
 </div>
