started adjusting the plays

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div id="introduction">
   <div class="outer_container">
     <div class="inner_container">
-      <a id="usds_logo" href="https://www.data4sdgs.org" title="Link to the Global Partnership"><img src='{{site.url}}/assets/images/gpsdd.png' alt="Logo of the Global Partnership"></a>
+      <a id="usds_logo" href="http://www.data4sdgs.org" title="Link to the Global Partnership"><img src='{{site.url}}/assets/images/gpsdd.png' alt="Logo of the Global Partnership"></a>
       
       {% capture introduction %}{% include introduction.md %}{% endcapture %}
       {{ introduction | markdownify }}
@@ -72,8 +72,10 @@
 
 <div id="sdgs" class="outer_container">
   <div class="inner_container">
-    <br><h2>Why we do this.  Together.</h2><br>    
-    <img src='{{site.url}}/assets/images/horizontal-icons.png' alt="SDGs">
+    <br><h2>Why we do this.  Together.</h2><br>   
+    <a id="usds_logo" href="http://www.un.org/sustainabledevelopment/sustainable-development-goals" title="Link to the UN"> 
+      <img width=100% src='{{site.url}}/assets/images/horizontal-icons.png' alt="SDGs">
+    </a>
   </div>
 </div>
 
