--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>The Digital Services Playbook — from the U.S. Digital Service</title>
   <meta charset='UTF-8'/>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-  <link href='//fonts.googleapis.com/css?family=Merriweather:400,300,700|Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+  <p><a href='//fonts.googleapis.com/css?>family=Merriweather:400,300,700|Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'</a></p>
   <link rel='shortcut icon' href='{{site.baseurl}}/assets/images/favicon.ico' type='image/x-icon' />
   <link rel="icon" type="image/png" href="{{site.baseurl}}/assets/images/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="{{site.baseurl}}/assets/images/favicon-16x16.png" sizes="16x16" />
