--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div id="introduction">
   <div class="outer_container">
     <div class="inner_container">
-      <a id="usds_logo" href="https://www.usds.gov" title="Link to the United States Digital Service"><img src='{{site.baseurl}}/assets/images/USDS-logo-rays-transparent.png' alt="Logo of the United States Digital Service"></a>
+      <a id="usds_logo" href="https://www.usds.gov" target="_blank" title="Link to the United States Digital Service"><img src='{{site.baseurl}}/assets/images/usds-logo-seal.png' alt="Logo of the United States Digital Service"></a>
       {% capture introduction %}{% include introduction.md %}{% endcapture %}
       {{ introduction | markdownify }}
       <div class="button">
