--- a/index.html
+++ b/index.html
@@ -83,5 +83,6 @@
 <script src='{{site.baseurl}}/assets/js/scrollspy.js'></script>
 <script src='{{site.baseurl}}/assets/js/site.js'></script>
 <script async id="_fed_an_js_tag" type="text/javascript" src="{{site.baseurl}}/assets/js/federated-analytics.all.min.js?agency=EOP&amp;sub-agency=USDS"></script>
+{% include google-analytics.html %}
 </body>
 </html>
